--- a/index.ipynb
+++ b/index.ipynb
@@ -152,10 +152,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def term_output():\n",
-    "    term_output = (3*x**2)\n",
-    "    return f(x)\n",
-    "\n"
+    "2\n",
+    "def term_output(term, input_value):\n",
+    "    return term[0]*input_value**term[1]\n"
    ]
   },
   {
