Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -172,7 +172,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "term_output((3,2),2)"
+   ]
   },
   {
    "cell_type": "markdown",
