--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,7 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    return output_at[0]"
+    "    return output_at[0]*x_value"
    ]
   },
   {
