--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,7 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    return list_of_terms*[0]*list_of_terms*output_at[1]"
+    "    return list_of_terms*[0]*list_of_terms1]"
    ]
   },
   {
